blog holder changes, updated composer, recaptcha, forms styles

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
 		"silverstripe/blog": "*",
 		"silverstripe/widgets": "*",
 		"silverstripe/userforms": "*",
-		"silverstripe/recaptcha": "*"
+		"silverstripe/recaptcha": "*",
+		"simplepie/simplepie": "*"
 	},
 
 	"minimum-stability": "dev"
