composer: require googlesitemaps and updated gitignore

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
 		"silverstripe/widgets": "*",
 		"silverstripe/userforms": "*",
 		"silverstripe/recaptcha": "*",
-		"simplepie/simplepie": "*"
+		"simplepie/simplepie": "*",
+		"silverstripe/googlesitemaps": "*"
 	},
 
 	"minimum-stability": "dev"
