--- a/mysite/_config/spamprotection.yml
+++ b/mysite/_config/spamprotection.yml
@@ -2,4 +2,4 @@
 name: spamprotection
 ---
 FormSpamProtectionExtension:
-  default_spam_protector: RecaptchaSpamProtector
+  default_spam_protector: RecaptchaProtector
