--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
 	"description": "The SilverStripe Framework Installer",
 	"require": {
 		"php": ">=5.3.2",
-		"md/division-project": "dev-master"
+		"md/division-project": "dev-master",
+		"nglasl/silverstripe-apiwesome" : "~3.1"
 
 	},
 	"config": {
