--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,11 @@
             "type": "vcs",
             "url": "https://github.com/StudentLifeMarketingAndDesign/division-bar"
 
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/StudentLifeMarketingAndDesign/ac-json-events"
+
         }
     ]
 
