--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "minimum-stability": "dev",
 	"require": {
 		"php": ">=5.3.2",
-		"md/division-project": "dev-master"
+		"md/division-project": "2.0.*"
 		
 
 	},
