--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "minimum-stability": "dev",
 	"require": {
 		"php": ">=5.3.2",
-		"md/division-project": "2.0.*"
+		"md/division-project": "2.0.2"
 		
 
 	},
@@ -32,6 +32,11 @@
         {
             "type": "vcs",
             "url": "https://github.com/StudentLifeMarketingAndDesign/rss-display"
+
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/StudentLifeMarketingAndDesign/silverstripe-flickr"
 
         }
     ]
