--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "grunt-contrib-sass": "*",
     "grunt-contrib-watch": "*",
     "grunt-simple-watch": "*",
-    "grunt-criticalcss": "*"
+    "grunt-criticalcss": "*",
+    "grunt-contrib-cssmin": "^0.12.3"
   }
 }
