--- a/.htaccess
+++ b/.htaccess
@@ -10,35 +10,62 @@
   Deny from all
 </Files>
 
-# This denies access to all yml files, since developers might include sensitive
-# information in them. See the docs for work-arounds to serve some yaml files
-<Files ~ "\.ya?ml$">
-  Order allow,deny
-  Deny from all
-</Files>
-
 ErrorDocument 404 /assets/error-404.html
 ErrorDocument 500 /assets/error-500.html
 
+<IfModule mod_alias.c>
+  RedirectMatch 403 /silverstripe-cache(/|$)
+</IfModule>
+
 <IfModule mod_rewrite.c>
   SetEnv HTTP_MOD_REWRITE On
-  RewriteEngine On  
+  RewriteEngine On
+## CONFIG FOR DEV ENVIRONMENTS
 
-  RewriteRule ^vendor(/|$) - [F,L,NC]
-  RewriteRule silverstripe-cache(/|$) - [F,L,NC]
-  RewriteRule composer\.(json|lock) - [F,L,NC]
+# Cached content - vp-for-student-life subdirectory
+RewriteCond %{REQUEST_METHOD} ^GET$
+RewriteCond %{QUERY_STRING} ^$
+RewriteCond %{REQUEST_URI} ^/vp-for-student-life/(.*)$
+RewriteCond %{REQUEST_URI} /vp-for-student-life/(.*[^/])/?$
+RewriteCond %{DOCUMENT_ROOT}/vp-for-student-life/cache/%1.html -f
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule .* /vp-for-student-life/cache/%1.html [L]
 
-  RewriteCond %{REQUEST_URI} ^(.*)$
-  RewriteCond %{REQUEST_FILENAME} !-f
-  RewriteCond %{REQUEST_URI} !\.php$
-  RewriteRule .* framework/main.php?url=%1 [QSA]
+# Cached content - homepage
+RewriteCond %{REQUEST_METHOD} ^GET$
+RewriteCond %{QUERY_STRING} ^$
+RewriteCond %{REQUEST_URI} ^/vp-for-student-life/?$
+RewriteCond /vp-for-student-life/cache/index.html -f
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule .* /vp-for-student-life/cache/index.html [L]
 
-  RewriteCond %{REQUEST_URI} ^(.*)/framework/main.php$
-  RewriteCond %{REQUEST_FILENAME} !-f
-  RewriteRule . %1/install.php? [R,L]
+## CONFIG FOR TEST/LIVE ENVIRONMENTS
 
-</IfModule>
+# Cached content - live webserver
+RewriteCond %{REQUEST_METHOD} ^GET$
+RewriteCond %{QUERY_STRING} ^$
+RewriteCond %{REQUEST_URI} /(.*[^/])/?$
+RewriteCond %{DOCUMENT_ROOT}/cache/%1.html -f
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule .* /cache/%1.html [L]
+
+# Cached content - homepage
+RewriteCond %{REQUEST_METHOD} ^GET$
+RewriteCond %{QUERY_STRING} ^$
+RewriteCond %{REQUEST_URI} ^/?$
+RewriteCond %{DOCUMENT_ROOT}/cache/index.html -f
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule .* /cache/index.html [L]
+
+## DYNAMIC CONFIG
+
+# Dynamic content
+RewriteCond %{REQUEST_URI} !(\.gif)|(\.jpg)|(\.png)|(\.css)|(\.js)|(\.php)$
+RewriteCond %{REQUEST_URI} ^(.*)$
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule .* staticpublisher/main.php?url=%1&%{QUERY_STRING} [L]
 ### SILVERSTRIPE END ###
+
 
 #php_value error_reporting 2147483647
 php_flag display_errors on
