--- a/mysite/gulp.yml
+++ b/mysite/gulp.yml
@@ -33,6 +33,8 @@ PATHS:
     # Libraries requried by Foundation
     - "bower_components/jquery/dist/jquery.js"
     - "bower_components/what-input/what-input.js"
+    # Background Videos:
+    #- "bower_components/vide/dist/jquery.vide.js"
     # Core Foundation files
     - "bower_components/foundation-sites/js/foundation.core.js"
     - "bower_components/foundation-sites/js/foundation.util.*.js"
@@ -57,6 +59,7 @@ PATHS:
     - "bower_components/foundation-sites/js/foundation.tabs.js"
     - "bower_components/foundation-sites/js/foundation.toggler.js"
     - "bower_components/foundation-sites/js/foundation.tooltip.js"
+
     # Division Project Scripts:
     - "src/scripts/!(app).js"
     - "src/scripts/app.js"
