silverstripe-activedirectory version constraint

--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,11 @@
             "type": "vcs",
             "url": "https://github.com/StudentLifeMarketingAndDesign/silverstripe-flickr"
 
-        }
+        },
+        {
+             "type": "vcs",
+             "url": "https://github.com/sosumi/silverstripe-activedirectory"
+          }
     ]
 
 }
