--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "scripts": {
     "start": "cd division-project && bower install && npm install && npm start",
     "build": "cd division-project && bower install && npm install && npm start"
+  },
+  "dependencies": {
+    "babel-preset-es2015": "^6.24.0"
   }
 }
