--- a/mysite/gulp.yml
+++ b/mysite/gulp.yml
@@ -33,7 +33,7 @@ PATHS:
   # Paths to JavaScript libraries, which are compined into one file
   javascript:
     # Libraries requried by Foundation
-    - "bower_components/jquery/dist/jquery.js"
+    #- "bower_components/jquery/dist/jquery.js"
     - "bower_components/what-input/dist/what-input.js"
     # Background Videos:
     #- "bower_components/vide/dist/jquery.vide.js"
