--- a/mysite/gulp.yml
+++ b/mysite/gulp.yml
@@ -51,7 +51,7 @@ PATHS:
     # - "bower_components/foundation-sites/js/foundation.equalizer.js"
     - "bower_components/foundation-sites/js/foundation.interchange.js"
     # - "bower_components/foundation-sites/js/foundation.magellan.js"
-    - "bower_components/foundation-sites/js/foundation.offcanvas.js"
+    # - "bower_components/foundation-sites/js/foundation.offcanvas.js"
     # - "bower_components/foundation-sites/js/foundation.orbit.js"
     # - "bower_components/foundation-sites/js/foundation.responsiveMenu.js"
     # - "bower_components/foundation-sites/js/foundation.responsiveToggle.js"
@@ -70,5 +70,5 @@ PATHS:
 
     # Division Project Scripts:
     - "src/scripts/lib/*.js"
-    - "src/scripts/!(app).js"
+    # - "src/scripts/!(app).js"
     - "src/scripts/app.js"
