--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,10 @@
         {
              "type": "vcs",
              "url": "https://github.com/StudentLifeMarketingAndDesign/fbpagefeed"
+        },
+        {
+             "type": "vcs",
+             "url": "https://github.com/StudentLifeMarketingAndDesign/silverstripe-betternavigator"
         }
     ]
 
