--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,9 @@
 	"name": "silverstripe/installer",
 	"description": "The SilverStripe Framework Installer",
     "minimum-stability": "dev",
+    "prefer-stable": true,
 	"require": {
-		"php": ">=5.3.2",
+		"php": ">=5.5",
 		"md/division-project": "dev-ss4.x"
 		
 
