--- a/composer.json
+++ b/composer.json
@@ -1,62 +1,60 @@
 {
-	"name": "silverstripe/installer",
-	"description": "The SilverStripe Framework Installer",
+    "name": "silverstripe/installer",
+    "description": "The SilverStripe Framework Installer",
     "minimum-stability": "dev",
-    "prefer-stable": true,
-	"require": {
-		"php": ">=5.5",
-		"md/division-project": "dev-ss4.x"
-		
-
-	},
-	"config": {
-		"process-timeout": 600	
-	},
-	
-	
+    "require": {
+        "php": ">=5.5",
+        "md/division-project": "dev-ss4.x"
+    },
+    "config": {
+        "process-timeout": 600
+    },
     "repositories": [
         {
             "type": "vcs",
             "url": "https://github.com/StudentLifeMarketingAndDesign/division-project"
-      
         },
         {
             "type": "vcs",
             "url": "https://github.com/StudentLifeMarketingAndDesign/silverstripe-amp"
-      
         },
         {
             "type": "vcs",
             "url": "https://github.com/StudentLifeMarketingAndDesign/division-analytics"
-      
         },
         {
             "type": "vcs",
             "url": "https://github.com/StudentLifeMarketingAndDesign/division-bar"
-
         },
         {
             "type": "vcs",
             "url": "https://github.com/StudentLifeMarketingAndDesign/ac-json-events"
-
         },
         {
             "type": "vcs",
-            "url": "https://github.com/StudentLifeMarketingAndDesign/rss-display"
-
+            "url": "https://github.com/StudentLifeMarketingAndDesign/silverstripe-activedirectory"
         },
         {
-             "type": "vcs",
-             "url": "https://github.com/StudentLifeMarketingAndDesign/silverstripe-activedirectory"
+            "type": "vcs",
+            "url": "https://github.com/StudentLifeMarketingAndDesign/fbpagefeed"
         },
         {
-             "type": "vcs",
-             "url": "https://github.com/StudentLifeMarketingAndDesign/fbpagefeed"
-        },
-        {
-             "type": "vcs",
-             "url": "https://github.com/StudentLifeMarketingAndDesign/silverstripe-betternavigator"
+            "type": "vcs",
+            "url": "https://github.com/StudentLifeMarketingAndDesign/silverstripe-betternavigator"
         }
-    ]
-
+    ],
+    "extra": {
+        "project-files-installed": [
+            ".htaccess",
+            "index.php",
+            "install-frameworkmissing.html",
+            "install.php",
+            "mysite/.htaccess",
+            "mysite/_config.php",
+            "mysite/_config/mysite.yml",
+            "mysite/code/Page.php",
+            "mysite/code/PageController.php",
+            "web.config"
+        ]
+    }
 }
