ss4 upgrade progress

--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,10 @@
         {
             "type": "vcs",
             "url": "https://github.com/StudentLifeMarketingAndDesign/silverstripe-betternavigator"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/StudentLifeMarketingAndDesign/silverstripe-blocks"
         }
     ],
     "extra": {
