--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,11 @@
         },
         {
             "type": "vcs",
+            "url": "https://github.com/StudentLifeMarketingAndDesign/silverstripe-blog"
+      
+        },
+        {
+            "type": "vcs",
             "url": "https://github.com/StudentLifeMarketingAndDesign/division-analytics"
       
         },
