--- a/.htaccess
+++ b/.htaccess
@@ -52,3 +52,6 @@ ErrorDocument 500 /assets/error-500.html
     RewriteRule .* index.php
 </IfModule>
 ### SILVERSTRIPE END ###
+php_flag display_startup_errors on
+php_flag display_errors on
+php_flag html_errors on
