--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.5",
-        "md/division-project": "dev-ss4.x"
+        "md/division-project": "dev-ss4.x-saml"
     },
     "config": {
         "process-timeout": 600
