--- a/mysite/_config/config.yml
+++ b/mysite/_config/config.yml
@@ -1,7 +1,7 @@
 ---
 Name: app
 Before:
-    - '#elemental'
+    - '*'
 ---
 SilverStripe\Core\Manifest\ModuleManifest:
   project: mysite
@@ -17,49 +17,5 @@ SilverStripe\Assets\File:
 ElementalEditor:
   extensions:
     - CustomElementalEditor
----
-Name: iowatestsamlsettings
-After:
-  - "*"
----
-
-SilverStripe\Control\Director:
-  rules:
-    'saml': SilverStripe\SAML\Control\SAMLController
-
-SilverStripe\Security\Member:
-  extensions:
-    - SilverStripe\SAML\Extensions\SAMLMemberExtension
-    - SilverStripe\SAML\Extensions\ActiveDirectoryMemberExtension
-
-  claims_field_mappings:
-    'urn:oid:2.5.4.42' : 'FirstName'
-    'urn:oid:2.5.4.4' : 'Surname'
-    'urn:oid:0.9.2342.19200300.100.1.3' : 'Email'
-    'silverstripeRoles' : 'silverstripeRoles'
-    
-SilverStripe\Security\Security:
-  logout_url: 'Security/SamlLogout'
-  extensions:
-    - SilverStripe\SAML\Authenticators\SAMLSecurityExtension
-    
-SilverStripe\Core\Injector\Injector:
-  SAMLConfService: SilverStripe\SAML\Services\SAMLConfiguration
-
 SilverStripe\SAML\Authenticators\SAMLAuthenticator:
-  name: "HawkID Login"
-  
-SilverStripe\SAML\Services\SAMLConfiguration:
-  strict: true
-  debug: true
-  SP:
-    entityId: "https://md.studentlife.uiowa.edu/sp-test"
-    privateKey: "/local/www/certs/saml.pem"
-    x509cert: "/local/www/certs/saml.crt"
-    nameIdFormat: "urn:oid:1.2.840.113556.1.4.2"
-  IdP:
-    entityId: "iowafed-test:idp:uiowa.edu"
-    x509cert: "/local/www/certs/idp-test.uiowa.edu.SAMLsigning_8443.cert"
-    singleSignOnService: "https://idp-test.uiowa.edu/idp/profile/SAML2/Redirect/SSO"
-  Security:
-    signatureAlgorithm: "http://www.w3.org/2001/04/xmldsig-more#rsa-sha256"
+  name: "Hawk ID"
