--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "description": "The SilverStripe Framework Installer",
     "require": {
         "php": ">=5.6.0",
-        "md/division-project": "dev-ss4.x-blocks"
+        "md/division-project": "dev-ss4.x"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7"
