vp upgrade complete

--- a/mysite/gulp.yml
+++ b/mysite/gulp.yml
@@ -16,10 +16,10 @@ UNCSS_OPTIONS:
 
 # Gulp will reference these paths when it copies files
 PATHS:
-  projectName: "vp-for-student-life"
+  projectName: "division-project-4"
   theme: "../../../themes/division-subtheme"
   # Path to theme folder
-  dist: "dist"  
+  dist: "dist"
   # Paths to static assets that aren't images, CSS, or JavaScript
   assets:
     - "src/**/*"
