--- a/mysite/gulp.yml
+++ b/mysite/gulp.yml
@@ -23,6 +23,7 @@ PATHS:
   # Paths to static assets that aren't images, CSS, or JavaScript
   assets:
     - "src/**/*"
+    - "!src/_manifest_exclude"
     - "!src/{images,scripts,scss,templates}/**/*"
     - "!src/{images,scripts,scss,templates}"
     - "!../themes/division-subtheme/src/{images,scripts,scss,templates}/**/*"
