--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,9 @@
     "description": "The SilverStripe Framework Installer",
     "require": {
         "php": ">=5.6.0",
-        "md/division-project": "dev-ss4.x"
+        "md/division-project": "dev-elemental4-replacecontent",
+        "dynamic/silverstripe-elemental-blocks": "^3.0",
+	"silverstripers/elemental-search":"dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7"
