--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,7 @@
     "description": "The SilverStripe Framework Installer",
     "require": {
         "php": ">=5.6.0",
-        "md/division-project": "dev-elemental4-replacecontent",
-        "dynamic/silverstripe-elemental-blocks": "^3.0",
-	"silverstripers/elemental-search":"dev-master"
+        "md/division-project": "2.*"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7"
